<resources>
    <string name="app_slogan_share_email">PasGo- Reservation Smart Applications!</string>
    <string name="connect_error_check_network">Server connection  error. Please check the internet connection again</string>
    <string name="loading_data">Loading data...</string>
    <string name="loi_ko_the_ket_noi_den_may_chu">Can not connect to server</string>
    <string name="goi_xe">Call Driver</string>
    <string name="goi_xe_h">CALL DRIVER</string>
    <string name="lich_su_chuyen_di">Successful Trips</string>
    <string name="menu_tai_tro">PasGo Card</string>
    <string name="menu_check_in">Reserve</string>
    <string name="gioi_thieu_ban_be">Share PasGo</string>
    <string name="thong_tin_ca_nhan">My account</string>
    <string name="dang_ki_tai_khoan">Register</string>
    <string name="huong_dan_su_dung_menu">Guide</string>
    <string name="dk_thong_tin">Register</string>
    <string name="cai_dat_menu">Setting(Thiết Lập)</string>
    <string name="thoat_ung_dung">Exit</string>
    <string name="cuocgoi">Call</string>
    <string name="mien_phi">Free</string>
    <string name="diem_quan_tam">Favorite</string>
    <string name="chon">Select</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="thoi_gian">00:00:00</string>
    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix"></string>
    <string name="time_ago_seconds">A few minutes before</string>
    <string name="time_ago_minute">A first second</string>
    <string name="time_ago_minutes">%d first second</string>
    <string name="time_ago_hour">A first hour</string>
    <string name="time_ago_hours">%d first hour</string>
    <string name="time_ago_day">Yesterday</string>
    <string name="time_ago_days">%d yesterday</string>
    <string name="time_ago_week">Last week</string>
    <string name="time_ago_weeks">%d last week</string>
    <string name="time_ago_month">A last month</string>
    <string name="time_ago_months">%d last month</string>
    <string name="time_ago_year">one year ago</string>
    <string name="time_ago_years">%d year ago</string>
    <string name="time_minutes">Minute</string>
    <string name="thong_tin_dat_xe">Driver finding</string>
    <string name="xac_nhan_title">Confirmation</string>
    <string name="theo_doi_tai_xe">Tracking driver</string>
    <string name="dang_tim_tai_xe">Finding drivers</string>
    <string name="dia_diem_hien_tai">My location</string>
    <string name="plz_nhap_diem_dau_cuoi">Enter start address and destination</string>
    <string name="dia_diem_den">Destination</string>
    <string name="chon_loai_xe">Select car</string>
    <string name="tin_khuyen_mai">Announcements</string>
    <string name="lich_su_chuyen_di1">HISTORY</string>
    <string name="di_xe_mien_phi_menu">Free ride</string>
    <string name="di_xe_mien_phi">FREE RIDE</string>
    <string name="search_dia_diem">Search Places</string>
    <string name="search_dia_diem_don">From</string>
    <string name="search_dia_diem_den">To</string>
    <string name="huy">Cancel</string>
    <string name="chia_se">Sharing</string>
    <string name="message_enable_network">Internet connection is interrupted. Do you want to turn on it?</string>
    <string name="no_know_location">Unlocated. The default location will be displayed</string>
    <string name="title_error_network">Not internet connection. Please try again</string>
    <string name="warning_time_dat_truoc">Service is not available now. Please submit request about 30 minutes before.</string>
    <string name="tb_dich_vu_google_bi_vo_hieu_hoa">Location service is disabled</string>
    <string name="setting">Setting</string>
    <string name="dat_xe">Call driver</string>
    <string name="khoang">Estimation: </string>
    <string name="thu_lai">Retry</string>
    <string name="complete">DONE</string>
    <string name="goi_hang">Call support</string>
    <string name="hang_xe">Taxi company: </string>
    <string name="loai_xe">Car type: </string>
    <string name="phut">Minute</string>
    <string name="taxi">Taxi: </string>
    <string name="dang_dung_duong_don_ban"> Driver is coming: </string>
    <string name="da_bao_gom_khuyen_mai">include sponsor:</string>
    <string name="khong_co_khuyen_mai">No having any sponsors</string>
    <string name="khong_co_du_lieu">No data</string>
    <string name="chua_co_diem_nao">Sorry, we can not find the location which you requested. Please try again.</string>
    <string name="link_kmNodata"><a href="http://pasgo.vn/">PasGo.VN</a></string>
    <string name="khong_co_dia_diem">Undefine the place.</string>
    <string name="tb_khong_the_ket_noi_voi_voi_may_chu">Can not connect to server</string>
    <string name="tb_thong_tin_khuyen_mai">Sponsor for new members</string>
    <string name="btn_thu_lai">Retry</string>
    <string name="tb_tai_du_lieu">Loading...</string>
    <string name="tb_chung_toi_khong_the_lien_lac_duoc">We can not communicate with taxi company.</string>
    <string name="do_khoang_cach_duong_di">Caculating the distance.</string>
    <string name="tb_lai_xe_huy_dat_xe">The order is rejected</string>
    <string name="tb_toi_da_den_don_ban"> Driver has to meet you.</string>
    <string name="tb_khach_len_xe"> Passengers got in taxi.</string>
    <string name="tb_khach_xuong_xe">Passengers got off taxi.</string>
    <string name="tb_chuyen_di_ket_thuc"> Drivers finished the ride.</string>
    <string name="tb_thoi_gian_dat_xe">Pick-up time must be more than the current time</string>
    <string name="huy_dat_xe">Are you sure to cancel request</string>
    <string name="tb_xac_dinh_vi_tri"> Defining the location </string>
    <string name="tb_thoat_app">Are you sure to close the application?</string>
    <string name="tb_khong_tim_thay_duong_di">Not find the route to get passenger.</string>
    <string name="title_connect_channel_state_connect">Connected</string>
    <string name="title_connect_channel_state_reconnect">Reconnecting</string>
    <string name="title_connect_channel_state_disconnect">Disconnected</string>
    <string name="title_connect_channel_state_success">Message received</string>
    <string name="title_connect_channel_state_error">Error connection</string>
    <string name="title_not_get_current_location">Unlocatable</string>
    <string name="title_put_down_to_download">Scroll down to download the data</string>
    <string name="title_release_to_update">Drop to update</string>
    <string name="title_no_driver_near_here">Not having any drivers around you. Please try again after a few minutes</string>
    <string name="dat_xe_dia_chi_don">From:\u0020</string>
    <string name="dat_xe_dia_chi_den">To:\u0020</string>
    <string name="dat_xe_nhan_chon_dia_diem">Touch here to select the destination</string>
    <string name="dat_xe_mo_ta_them_de_taxi_don">More describing for the convenient of driver coming</string>
    <string name="dat_xe_goi_ngay_bay_gio">Time: Now</string>
    <string name="dat_xe_ma_khuyen_mai">Use Code sponsors here</string>
    <string name="dat_xe_text">CALL TAXI</string>
    <string name="dat_xe_thong_bao_thuong">Thank you for using PasGo.</string>
    <string name="dat_xe_thong_bao">The system automatically search taxi company/ type of taxi following your choice. or you can choose taxi company, type of taxi above the system.</string>
    <string name="dat_xe_phut">Minute</string>
    <string name="dat_xe_chon_thoi_gian_de_taxi_don">Fill in pick-up time</string>
    <string name="dat_xe_popup_thong_bao">Check order information again, please!</string>
    <string name="nhap_binh_luan">Leave your comment</string>
    <string name="nhap_tin_nhan">Write your message</string>
    <string name="toi">Me:</string>
    <string name="tb_tooltip_goixe">Call driver taxi hit enter call driver</string>
    <string name="tb_tooltip_khuyenmai">Hit enter to watch sponsor news</string>
    <string name="tb_tooltip_datxe">Show detail, hit enter CONTINUE</string>
    <string name="tb_tooltip_tieptuc">Hit enter CONFIRM to find driver</string>
    <string name="tb_tooltip_hoanthanh">Hit enter Done to complete call driver</string>
    <string name="tb_tooltip_goihang">Hit enter Call support number to be supported</string>
    <string name="tb_tooltip_tdtx_goi_di_dong">Hit enter Call mobile number to comunicate with driver</string>
    <string name="tb_tooltip_tdtx_xong">Hit enter Done to complete call taxi</string>
    <string name="loai_xe_">Car type:\u0020 </string>
    <string name="chon_loai_xe_tat_ca">Car types: All</string>
    <string name="chon_loai_xe_taxi_4_cho_hatback">Taxi 4 chỗ hatback</string>
    <string name="chon_loai_xe_taxi_4_cho_sedan">Taxi 4 chỗ sedan</string>
    <string name="chon_loai_xe_taxi_7_cho">Taxi 7 chỗ</string>
    <string name="tiep_tuc">CONTINUES</string>
    <string name="uoc_tinh">Estimation</string>
    <string name="tim_kiem_dd">Search</string>
    <string name="search_address">Search address</string>
    <string name="bt_huy">Cancel</string>
    <string name="expand_more">Read more</string>
    <string name="dia_chi_da_tim">Address found</string>
    <string name="dia_chi_quen_thuoc">Favorite</string>
    <string name="vt_hien_tai">Current Location</string>
    <string name="xong">Done</string>
    <string name="rate_pastaxi">Rating now </string>
    <string name="remind_me_later">Remind later</string>
    <string name="no_rating">No, thanks</string>
    <string name="dong_y">OK</string>
    <string name="kich_hoat">Activation</string>
    <string name="ma_kich_hoat">Activation code</string>
    <string name="ma_kich_hoat_plz">The activation code has been sent to your phone number. It may take up to minutes if the network is busy</string>
    <string name="rate_pastxi_title">Rating PasGo </string>
    <string name="rate_pastxi_title_message">Thank for your using PasGo, please support us by voting.</string>
    <string name="link_gui_lai1">If you don\'t receive a activation code, please touch: </string>
    <string name="input_ma_kich_hoat">Enter activation code</string>
    <string name="resend_activation_code">Resend activation code</string>
    <string name="update_presenter_des">Please enter the &lt;b>Register Code&lt;/b>, otherwise you enter the code: 123456. To get attractive gifts.</string>
    <string name="update_presenter_des_2">Each Code Register have different gifts, this gift can be PasGo Card discounts to destinations in PasGo.</string>
    <string name="update_presenter_tit">Register Code</string>
    <string name="update_presenter_err">Enter the Register Code invalid, please try again</string>
    <string name="checkin_xacnhan_1">You are reserving to: &lt;b>%s&lt;/b>.</string>
    <string name="checkin_xacnhan_2">You will get surely the listed benefits of &lt;b>%s&lt;/b>.\nPlease review the above information, then click &lt;b>Confirmation&lt;/b> to complete your reservation!</string>
    <string name="share_now">Share Now</string>
    <string name="the_pasgo_intro">Usage and receive PasGo card: </string>
    <string name="the_pasgo_intro1">Step 1: Press Detail\nStep 2: Select Destination\nStep 3: Reservation and experience</string>
    <string name="the_pasgo_intro2">Change the par value or the card expiry date of the PasGo card.\nCall &lt;b>19006005&lt;/b> </string>
    <string name="the_pasgo_intro3">&lt;font color=\'black\' >&lt;strong>Share with friends to get PasGo Cards&lt;strong>&lt;/font> &lt;font color=\'#1662bf\'>&lt;u>&lt;i>View detail&lt;/i>&lt;/u>&lt;/font></string>
    <string name="so_nguoi_lon_common">Adults:</string>
    <string name="so_nguoi_tre_em_common">Children:</string>
    <string name="ngay_thang_common">Date:</string>
    <string name="gio_common">Time:</string>
    <string name="presenrer_read_more">Read more</string>
    <string name="xac_nhan_dat_cho_title">reserve confirmation</string>
</resources>