<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnThePasGoIntro"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:layout_margin="@dimen/the_pasgo_intro_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/the_pasgo_intro_margin">
            <TextView
                android:id="@+id/the_pasgo_intro_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_pasgo_intro"
                android:textColor="@color/the_pasgo_intro_title"/>
            <TextView
                android:id="@+id/the_pasgo_intro_1_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_pasgo_intro1"
                android:layout_marginTop="@dimen/margin_all"/>
            <TextView
                android:id="@+id/the_pasgo_intro_2_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_pasgo_intro2"
                android:layout_marginTop="@dimen/margin_all"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/the_pasgo_intro_3_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_pasgo_intro3"
                    android:paddingTop="@dimen/margin_all"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/chia_se_ngay_btn"
                    />
                <Button
                    android:id="@+id/chia_se_ngay_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_now"
                    android:paddingStart="@dimen/margin_all"
                    android:paddingEnd="@dimen/margin_all"
                    android:textColor="@color/the_pasgo_intro_title"
                    android:background="@drawable/selector_corner_xam"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>