<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mau_nen_chung"
    android:orientation="vertical">
    <include layout="@layout/layout_tool_bar_title"></include>
    <LinearLayout
        android:id="@+id/ln_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <include layout="@layout/error_connect_network_layout" />
    </LinearLayout>
    <TextView
        android:id="@+id/tvError"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin_all"
        android:background="@color/presenter_err_bg"
        android:textColor="@color/presenter_err_text"
        android:visibility="gone"
        android:text="@string/update_presenter_err"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_margin_left_right"
            android:layout_marginEnd="@dimen/login_margin_left_right"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtPresenter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_textbox_height"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/presenter_button_margin_top"
                android:background="@drawable/bg_edittext"
                android:hint="@string/update_presenter_tit"
                android:inputType="text"
                android:maxLength="160"
                android:paddingStart="@dimen/margin_all"
                android:scrollbars="horizontal|vertical"
                android:lines="1"
                android:ellipsize="end"
                android:textColor="@color/den" />

            <TextView
                android:id="@+id/presenter_des_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_all"
                android:text="@string/update_presenter_des" />
            <LinearLayout
                android:id="@+id/read_more_ln"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_all"
                android:paddingBottom="@dimen/margin_all"
                android:paddingEnd="@dimen/margin_all"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/read_more_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/xem_them_x"/>
                <TextView
                    android:id="@+id/read_more_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/presenrer_read_more"
                    android:layout_marginStart="@dimen/persenrer_read_more_tv_margin_left"
                    android:textColor="@color/persenrer_read_more"
                    android:layout_gravity="bottom"/>
            </LinearLayout>
            <TextView
                android:id="@+id/presenter_des_tv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_presenter_des_2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_button_langage_height"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/margin_all"
                    android:background="@drawable/selector_bg_red"
                    android:text="@string/xong"
                    android:textColor="@color/white"
                    android:textSize="@dimen/login_button_langage_textsize" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>