<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/layout_popup_width"
    android:layout_height="match_parent"
    android:background="@color/mau_nen_chung"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_all"
        android:text="@string/xac_nhan_dat_cho_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:autoLink="email"
        android:textSize="@dimen/popup_text_title_size"
        android:layout_gravity="center_horizontal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@drawable/border_vien"
        android:layout_marginStart="@dimen/margin_popup_line"
        android:layout_marginEnd="@dimen/margin_popup_line"/>
    <TextView
        android:id="@+id/tvThongBao1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_all"
        android:text="@string/checkin_xacnhan_1"
        android:textColor="@color/black"
        android:textSize="@dimen/popup_confirm_checkin_text_size"
        android:layout_gravity="left"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/so_nguoi_lable_tv"
            android:layout_width="@dimen/check_in_dialog_left_width"
            android:layout_height="wrap_content"
            android:text="@string/so_nguoi_lon_common"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="@dimen/popup_confirm_checkin_text_size"/>
        <TextView
            android:id="@+id/so_nguoi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."
            android:textColor="@color/black"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="@dimen/popup_confirm_checkin_text_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/so_nguoi_tre_em_lable_tv"
            android:layout_width="@dimen/check_in_dialog_left_width"
            android:layout_height="wrap_content"
            android:text="@string/so_nguoi_tre_em_common"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="@dimen/popup_confirm_checkin_text_size"/>
        <TextView
            android:id="@+id/so_nguoi_tre_em_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."
            android:textColor="@color/black"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="@dimen/popup_confirm_checkin_text_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ngay_lable_tv"
            android:layout_width="@dimen/check_in_dialog_left_width"
            android:layout_height="wrap_content"
            android:text="@string/ngay_thang_common"
            android:textColor="@color/black"
            android:lines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            android:textSize="@dimen/popup_confirm_checkin_text_size"/>
        <TextView
            android:id="@+id/ngay_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."
            android:textColor="@color/black"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="@dimen/popup_confirm_checkin_text_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_all"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/gio_lable_tv"
            android:layout_width="@dimen/check_in_dialog_left_width"
            android:layout_height="wrap_content"
            android:text="@string/gio_common"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="@dimen/popup_confirm_checkin_text_size"/>
        <TextView
            android:id="@+id/gio_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..."
            android:textColor="@color/black"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="@dimen/popup_confirm_checkin_text_size"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvThongBao2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_all"
        android:text="@string/checkin_xacnhan_2"
        android:textColor="@color/black"
        android:textSize="@dimen/popup_confirm_checkin_text_size"
        android:layout_gravity="left"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@drawable/border_vien"
        android:layout_marginStart="@dimen/margin_popup_line"
        android:layout_marginEnd="@dimen/margin_popup_line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_buttom_height"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnDongY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dong_y"
            android:layout_toEndOf="@+id/view"
            android:background="@drawable/selector_bg_white_null"
            android:textColor="@color/red"
            android:layout_weight="1"/>
        <View
            android:id="@+id/view"
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/ndkm_line"
            android:layout_centerHorizontal="true"/>
        <com.onepas.android.pasgo.widgets.AutoBGButton
            android:id="@+id/btnHuy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/selector_bg_white_null"
            android:text="@string/huy"
            android:layout_toStartOf="@+id/view"
            android:textColor="@color/black"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:background="@drawable/border_vien"
        android:layout_marginStart="@dimen/margin_popup_line"
        android:layout_marginEnd="@dimen/margin_popup_line"/>
</LinearLayout>